--- a/index.html
+++ b/index.html
@@ -27,34 +27,39 @@
     <header>
       <nav class="navbar">
         <div class="nav-logo"></div>
-        <div class="nav-main">
-          <ul>
-          <li><a class="hover-line" href="./index.html">Home</a></li>
-          <li><a class="hover-line" href="./about.html">About</a></li>
-          <li><a class="hover-line" href="./skills.html">My Skills</a></li>
-          <li><a class="hover-line" href="./work.html">My Work</a></li>
-          <li><a class="hover-line" href="./contact.html">Contact</a></li>
+        <ul class="nav-main">
+            <li><a class="hover-line" href="./index.html">Home</a></li>
+            <li><a class="hover-line" href="./about.html">About</a></li>
+            <li><a class="hover-line" href="./skills.html">My Skills</a></li>
+            <li><a class="hover-line" href="./work.html">My Work</a></li>
+            <li><a class="hover-line" href="./contact.html">Contact</a></li>
+        </ul>
+        <ul class="nav-contact">
+            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            <a
+              href="https://github.com/CodeSwagsy"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><i class="fa-brands fa-square-github"></i
+            ></a>
+            <a
+              href="https://www.instagram.com/who.is.manuel_d/"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><i class="fa-brands fa-square-instagram"></i
+            ></a>
           </ul>
-        </div>
-        <div class="nav-contact">
-          <ul>
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a
-            >
-            <a href="https://github.com/CodeSwagsy" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-github"></i></a
-            >
-            <a href="https://www.instagram.com/who.is.manuel_d/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-instagram"></i></a
-            >
-          </ul>
-        </div>
       </nav>
     </header>
     <main>
+      <div class="homecontainer">
       <section class="home">
-        <h2>Welcome to <b>C</b><b>o</b><b>d</b><b>e</b><b>S</b><b>w</b><b>a</b><b>g</b><b>s</b><b>y</b><b>!</b></h2>
-        <h2>I'm <span>Manuel</span></h2>
-        <h2>and i'm a <span>web dev</span>eloper.</h2>
+        <h2>Welcome to <span>C</span><span>o</span><span>d</span><span>e</span><span>S</span><span>w</span><span>a</span><span>g</span><span>s</span><span>y</span><span>!</span></h2>
+        <h2>I'm <span>M</span><span>a</span><span>n</span><span>u</span><span>e</span><span>l</span></h2>
+        <h2>and i'm a <span>w</span><span>e</span><span>b</span><span> </span><span>d</span><span>e</span><span>v</span>eloper.</h2>
         <a class="contactme" href="./contact.html">Contact me!</a>
       </section>
+      </div>
     </main>
     <footer></footer>
   </body>
