--- a/work.html
+++ b/work.html
@@ -27,17 +27,14 @@
     <header>
       <nav class="navbar">
         <div class="nav-logo"></div>
-        <div class="nav-main">
-          <ul>
+        <ul class="nav-main">
             <li><a class="hover-line" href="./index.html">Home</a></li>
             <li><a class="hover-line" href="./about.html">About</a></li>
             <li><a class="hover-line" href="./skills.html">My Skills</a></li>
             <li><a class="hover-line" href="./work.html">My Work</a></li>
             <li><a class="hover-line" href="./contact.html">Contact</a></li>
-          </ul>
-        </div>
-        <div class="nav-contact">
-          <ul>
+        </ul>
+        <ul class="nav-contact">
             <a href="#"><i class="fa-brands fa-linkedin"></i></a>
             <a
               href="https://github.com/CodeSwagsy"
@@ -52,45 +49,54 @@
               ><i class="fa-brands fa-square-instagram"></i
             ></a>
           </ul>
-        </div>
       </nav>
     </header>
     <main>
-      <section class="work">
+      <section class="mywork">
+        <div class="container">
         <h2 class="work-head">my work</h2>
         <div class="work-container">
           <div class="work">
             <h2>4handy</h2>
-            <img src="" alt="" />
-            <a href="http://" target="_blank" rel="noopener"></a>
-            <p>Beschreibung</p>
+            <img src="./src/img/4handy.png" alt="4handy website" />
+            <a
+              href="https://codeswagsy.github.io/4handy/"
+              target="_blank"
+              rel="noopener"
+              >Click me!</a
+            >
+            <p>This was our first group project as part of the DCI course.</p>
           </div>
           <div class="work">
             <h2>myveryfirstproject</h2>
-            <img src="" alt="" />
-            <a href="http://" target="_blank" rel="noopener noreferrer"></a>
-            <p>Beschreibung</p>
+            <img
+              src="./src/img/myveryfirst.png"
+              alt="myveryfirstpage website"
+            />
+            <a 
+              href="https://codeswagsy.github.io/myveryfirstpage/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Click me!</a
+            >
+            <p>This was my first proper attempt at creating my own website.</p>
           </div>
-          <div class="work">
-            <h2>???</h2>
-            <img src="" alt="" />
-            <a href="#"></a>
-            <p>Beschreibung</p>
+          <div class="work hidden">
+            <img src="./src/img/questionmark.svg" alt="questionmark" />
           </div>
-          <div class="work">
-            <h2>???</h2>
-            <img src="" alt="" />
-<a href="#"></a>
-            <p>Beschreibung</p>
+          <div class="work hidden">
+            <img src="./src/img/questionmark.svg" alt="questionmark" />
           </div>
+        </div>
+        <h3 class="work-head">
+          more work <b>c</b><b>o</b><b>m</b><b>i</b><b>n</b><b>g</b> <b>s</b
+          ><b>o</b><b>o</b><b>n</b>...
+        </h3>
         </div>
       </section>
     </main>
     <footer>
-      <h3 class="work-head">
-        more work <b>c</b><b>o</b><b>m</b><b>i</b><b>n</b><b>g</b> <b>s</b
-        ><b>o</b><b>o</b><b>n</b>...
-      </h3>
+      
     </footer>
   </body>
 </html>
