--- a/about.html
+++ b/about.html
@@ -27,56 +27,94 @@
     <header>
       <nav class="navbar">
         <div class="nav-logo"></div>
-        <div class="nav-main">
-          <ul>
-            <li><a class="hover-line" href="./index.html">Home</a></li>
-            <li><a class="hover-line" href="./about.html">About</a></li>
-            <li><a class="hover-line" href="./skills.html">My Skills</a></li>
-            <li><a class="hover-line" href="./work.html">My Work</a></li>
-            <li><a class="hover-line" href="./contact.html">Contact</a></li>
-            </ul>
-        </div>
-        <div class="nav-contact">
-          <ul>
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a
-            >
-            <a href="https://github.com/CodeSwagsy" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-github"></i></a
-            >
-            <a href="https://www.instagram.com/who.is.manuel_d/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-instagram"></i></a
-            >
-          </ul>
-        </div>
+        <ul class="nav-main">
+          <li><a class="hover-line" href="./index.html">Home</a></li>
+          <li><a class="hover-line" href="./about.html">About</a></li>
+          <li><a class="hover-line" href="./skills.html">My Skills</a></li>
+          <li><a class="hover-line" href="./work.html">My Work</a></li>
+          <li><a class="hover-line" href="./contact.html">Contact</a></li>
+        </ul>
+        <ul class="nav-contact">
+          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+          <a
+            href="https://github.com/CodeSwagsy"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fa-brands fa-square-github"></i
+          ></a>
+          <a
+            href="https://www.instagram.com/who.is.manuel_d/"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fa-brands fa-square-instagram"></i
+          ></a>
+        </ul>
       </nav>
     </header>
     <main>
       <section>
-<h2 class="about-head">About me</h2>
-<div class="about-container">
-<div class="about">
-  <h2><span>W</span><span>h</span><span>o</span><span>?</span></h2>
-        <p>Hi there! My name is Manuel and I have been passionate about computers since I was 14 years old. Over the past 20 years, I have gained extensive experience in both software and hardware.</p>
-</div>
-        <div class="about">
-          <h2>
-            <span>W</span><span>h</span><span>y</span><span> </span><span>c</span><span>o</span><span>d</span><span>i</span><span>n</span><span>g</span><span>?</span><span></span>
-          </h2>
-<p>For a long time, I have been interested in pursuing a career as a web developer, and I am excited to finally be making that dream a reality. I have always been fascinated by the power of the internet and the endless possibilities it offers.</p>
+        <div class="container">
+          <h2 class="about-head">About me</h2>
+          <div class="content-container">
+            <div class="about">
+              <h2><span>W</span><span>h</span><span>o</span><span>?</span></h2>
+              <p>
+                Hi there! My name is Manuel and I have been passionate about
+                computers since I was 14 years old. Over the past 20 years, I
+                have gained extensive experience in both software and hardware.
+              </p>
+            </div>
+            <div class="about">
+              <h2>
+                <span>W</span><span>h</span><span>y</span><span> </span
+                ><span>c</span><span>o</span><span>d</span><span>i</span
+                ><span>n</span><span>g</span><span>?</span><span></span>
+              </h2>
+              <p>
+                For a long time, I have been interested in pursuing a career as
+                a web developer, and I am excited to finally be making that
+                dream a reality. I have always been fascinated by the power of
+                the internet and the endless possibilities it offers.
+              </p>
+            </div>
+            <div class="about">
+              <h2>
+                <span>W</span><span>h</span><span>a</span><span>t</span
+                ><span> </span><span>m</span><span>o</span><span>r</span
+                ><span>e</span><span>?</span>
+              </h2>
+              <p>
+                In addition to my technical skills, I am also a creative problem
+                solver and enjoy working in a team environment. I am dedicated
+                to staying up-to-date with the latest technologies and
+                techniques in the industry, and am always seeking out new
+                challenges and opportunities to learn and grow.
+              </p>
+            </div>
+            <div class="about">
+              <h2>
+                <span>S</span><span>u</span><span>m</span><span>m</span
+                ><span>a</span><span>r</span><span>y</span>
+              </h2>
+              <p>
+                Overall, I am a driven and enthusiastic individual who is
+                passionate about using technology to make a positive impact on
+                the world.
+              </p>
+            </div>
+          </div>
+          <h3 class="about-head">
+            Want to know more about me? Feel free to
+            <a href="./contact.html"
+              ><span>g</span><span>e</span><span>t</span><span> </span
+              ><span>i</span><span>n</span><span> </span><span>t</span
+              ><span>o</span><span>u</span><span>c</span><span>h</span
+              ><span>!</span></a
+            >
+          </h3>
         </div>
-<div class="about">
-  <h2>
-    <span>W</span><span>h</span><span>a</span><span>t</span><span> </span><span>m</span><span>o</span><span>r</span><span>e</span><span>?</span>
-  </h2>
-<p>In addition to my technical skills, I am also a creative problem solver and enjoy working in a team environment. I am dedicated to staying up-to-date with the latest technologies and techniques in the industry, and am always seeking out new challenges and opportunities to learn and grow.</p>
-</div>
-<div class="about">
-  <h2>
-    <span>S</span><span>u</span><span>m</span><span>m</span><span>a</span><span>r</span><span>y</span>
-  </h2>
-<p>Overall, I am a driven and enthusiastic individual who is passionate about using technology to make a positive impact on the world.</p>
-</div>
-</div>
       </section>
     </main>
-    <footer><h3 class="about-head">Want to know more about me? Feel free to get in touch!</h3></footer>
+    <footer></footer>
   </body>
 </html>
