--- a/contact.html
+++ b/contact.html
@@ -27,75 +27,94 @@
     <header>
       <nav class="navbar">
         <div class="nav-logo"></div>
-        <div class="nav-main">
-          <ul>
-            <li><a class="hover-line" href="./index.html">Home</a></li>
-            <li><a class="hover-line" href="./about.html">About</a></li>
-            <li><a class="hover-line" href="./skills.html">My Skills</a></li>
-            <li><a class="hover-line" href="./work.html">My Work</a></li>
-            <li><a class="hover-line" href="./contact.html">Contact</a></li>
-            </ul>
-        </div>
-        <div class="nav-contact">
-          <ul>
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a
-            >
-            <a href="https://github.com/CodeSwagsy" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-github"></i></a
-            >
-            <a href="https://www.instagram.com/who.is.manuel_d/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-instagram"></i></a
-            >
-          </ul>
-        </div>
+        <ul class="nav-main">
+          <li><a class="hover-line" href="./index.html">Home</a></li>
+          <li><a class="hover-line" href="./about.html">About</a></li>
+          <li><a class="hover-line" href="./skills.html">My Skills</a></li>
+          <li><a class="hover-line" href="./work.html">My Work</a></li>
+          <li><a class="hover-line" href="./contact.html">Contact</a></li>
+        </ul>
+        <ul class="nav-contact">
+          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+          <a
+            href="https://github.com/CodeSwagsy"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fa-brands fa-square-github"></i
+          ></a>
+          <a
+            href="https://www.instagram.com/who.is.manuel_d/"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fa-brands fa-square-instagram"></i
+          ></a>
+        </ul>
       </nav>
     </header>
     <main>
       <section>
-        <h2 class="contact-head">contact me</h2>
-        <div class="contact">
-          <div class="contactcontainer">
-            <form action="post">
-              <div class="name">
-                <label for="name">Name</label>
-                <input type="text" name="name" id="name" placeholder="Name" />
-              </div>
-              <div class="email">
-                <label for="email">Email</label>
-                <input
-                  type="text"
-                  name="email"
-                  id="email"
-                  placeholder="Email"
-                />
-              </div>
-              <div class="betreff">
-                <label for="Betreff">Subject</label>
-                <input
-                  type="text"
-                  name="Betreff"
-                  id="Betreff"
-                  placeholder="Subject"
-                />
-              </div>
-              <div class="nachricht">
-                <label for="nachricht">Message</label>
-                <textarea
-                  name="nachricht"
-                  id="nachricht"
-                  placeholder="Type your message here"
-                  rows="10"
-                ></textarea>
-              </div>
-              <div>
-                <input class="button" type="submit" value="Send" disabled="disabled" />
-              </div>
-            </form>
+        <div class="container">
+          <h2 class="contact-head">contact me</h2>
+          <div class="contact">
+            <div class="contactcontainer">
+              <form action="post">
+                <div class="name">
+                  <label for="name">Name</label>
+                  <input type="text" name="name" id="name" placeholder="Name" />
+                </div>
+                <div class="email">
+                  <label for="email">Email</label>
+                  <input
+                    type="text"
+                    name="email"
+                    id="email"
+                    placeholder="Email"
+                  />
+                </div>
+                <div class="betreff">
+                  <label for="Betreff">Subject</label>
+                  <input
+                    type="text"
+                    name="Betreff"
+                    id="Betreff"
+                    placeholder="Subject"
+                  />
+                </div>
+                <div class="nachricht">
+                  <label for="nachricht">Message</label>
+                  <textarea
+                    name="nachricht"
+                    id="nachricht"
+                    placeholder="Type your message here"
+                    rows="10"
+                  ></textarea>
+                </div>
+                <div>
+                  <input
+                    class="button"
+                    type="submit"
+                    value="Send"
+                    disabled="disabled"
+                  />
+                </div>
+              </form>
+            </div>
+            <div class="iframe hidden">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2627.1180186825027!2d11.8348487!3d48.817809600000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479fb40ac54a4e7d%3A0x16645046e148f387!2sAm%20Bahndamm%2029%2C%2093326%20Abensberg!5e0!3m2!1sde!2sde!4v1683098037638!5m2!1sde!2sde"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </div>
           </div>
-          <div class="iframe">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2627.1180186825027!2d11.8348487!3d48.817809600000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479fb40ac54a4e7d%3A0x16645046e148f387!2sAm%20Bahndamm%2029%2C%2093326%20Abensberg!5e0!3m2!1sde!2sde!4v1683098037638!5m2!1sde!2sde" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-          </div>
+          <p class="contact-foot">
+            <i class="fa-regular fa-copyright"></i> 2023 | CodeSwagsy
+          </p>
         </div>
       </section>
     </main>
-    <footer><p class="contact-foot"><i class="fa-regular fa-copyright"></i> 2023 | CodeSwagsy</p></footer>
+    <footer></footer>
   </body>
 </html>
