--- a/skills.html
+++ b/skills.html
@@ -27,29 +27,33 @@
     <header>
       <nav class="navbar">
         <div class="nav-logo"></div>
-        <div class="nav-main">
-          <ul>
+        <ul class="nav-main">
             <li><a class="hover-line" href="./index.html">Home</a></li>
             <li><a class="hover-line" href="./about.html">About</a></li>
             <li><a class="hover-line" href="./skills.html">My Skills</a></li>
             <li><a class="hover-line" href="./work.html">My Work</a></li>
             <li><a class="hover-line" href="./contact.html">Contact</a></li>
-            </ul>
-        </div>
-        <div class="nav-contact">
-          <ul>
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a
-            >
-            <a href="https://github.com/CodeSwagsy" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-github"></i></a
-            >
-            <a href="https://www.instagram.com/who.is.manuel_d/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-instagram"></i></a
-            >
+        </ul>
+        <ul class="nav-contact">
+            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            <a
+              href="https://github.com/CodeSwagsy"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><i class="fa-brands fa-square-github"></i
+            ></a>
+            <a
+              href="https://www.instagram.com/who.is.manuel_d/"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><i class="fa-brands fa-square-instagram"></i
+            ></a>
           </ul>
-        </div>
       </nav>
     </header>
     <main>
       <section>
+        <div class="container">
         <h2 class="skills-head">my skills</h2>
         <div class="skills">
           <div class="card">
@@ -57,7 +61,7 @@
               <div class="front">
                 <img src="./src/img/html.svg" alt="HTML" />
                 <h2>HTML</h2>
-                <p>Hover me!</p>
+                <p>Flip me!</p>
               </div>
               <div class="back">
                 <h2>HTML</h2>
@@ -71,7 +75,7 @@
               <div class="front">
                 <img src="./src/img/CSS.svg" alt="CSS" />
                 <h2>CSS</h2>
-                <p>Hover me!</p>
+                <p>Flip me!</p>
               </div>
               <div class="back">
                 <h2>CSS</h2>
@@ -85,7 +89,7 @@
               <div class="front">
                 <img src="./src/img/js.svg" alt="JS" />
                 <h2>JavaScript</h2>
-                <p>Hover me!</p>
+                <p>Flip me!</p>
               </div>
               <div class="back">
                 <h2>JavaScript</h2>
@@ -99,7 +103,7 @@
               <div class="front">
                 <img src="./src/img/dots.svg" alt="more" />
                 <h2>and more!</h2>
-                <p>Hover me!</p>
+                <p>Flip me!</p>
               </div>
               <div class="back">
                 <h2>more skills...</h2>
@@ -107,14 +111,17 @@
               <h3>SASS / SCSS</h3>
               <h3>Responsive Design</h3>
               <h3>Linux (Ubuntu)</h3>
+              <h3>git</h3>
               <h3>npm</h3>
               </div>
             </div>
           </div>
         </div>
+        <h3 class="skills-head">more skills <b>l</b><b>o</b><b>a</b><b>d</b><b>i</b><b>n</b><b>g</b>...</h3>
+        </div>
 
       </section>
     </main>
-    <footer><h3 class="skills-head">more skills <b>l</b><b>o</b><b>a</b><b>d</b><b>i</b><b>n</b><b>g</b>...</h3></footer>
+    <footer></footer>
   </body>
 </html>
